--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "assets": ["./Assests"],
   "dependencies": {
+    "@material-tailwind/react": "^2.0.8",
     "autoprefixer": "10.4.14",
     "framer-motion": "^10.13.1",
     "next": "13.4.12",
@@ -19,3 +21,4 @@
     "tailwindcss": "3.3.3"
   }
 }
+
