--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "start": "next start",
     "lint": "next lint"
   },
-  "assets": ["./Assests"],
+  "assets": [
+    "./Assests"
+  ],
   "dependencies": {
     "@material-tailwind/react": "^2.0.8",
+    "antd": "^5.8.2",
     "autoprefixer": "10.4.14",
     "framer-motion": "^10.13.1",
     "next": "13.4.12",
@@ -21,4 +24,3 @@
     "tailwindcss": "3.3.3"
   }
 }
-
